--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   },
   "dependencies": {
     "@prisma/client": "4.3.1",
+    "immer": "^9.0.16",
     "next": "12.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "swr": "^0.4.1"
+    "swr": "^0.4.1",
+    "use-immer": "^0.8.1"
   },
   "devDependencies": {
-    "prisma": "4.3.1",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
+    "prisma": "4.3.1",
     "typescript": "^4.1.3"
   }
 }
